--- a/index.html
+++ b/index.html
@@ -27,11 +27,18 @@
                     moderncollegeofpharmacyjhansi@gmail.com</a>
                     <a href="tel:+91 9889094094"><i class="fa-solid fa-phone"></i>+91 9889094094</a>
                     <a href="#"><p>Follow Social Media :</p></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.youtube.com/@modernpublicschooljhansi8250" target="_blank"><i
-                            class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/ModernCollegeofPharmacy?mibextid=ZbWKwL" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/moderngrpof_pharmacy?igsh=MXI0NXlyZW1rN2Z4Mw==" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
                     <button class="enquiry-btn" type="submit" value="Enquiry">ENQUIRY FORM</button>
             </div>
             <div class="form-container">
@@ -132,14 +139,26 @@
     </div>
     
     <div class="social-media">
-        <div class="elem"> <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <div class="elem"> 
+            <a href="https://www.facebook.com/ModernCollegeofPharmacy?mibextid=ZbWKwL" target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
         </div>
-        <div class="elem"><a href="https://www.instagram.com/" target="_blank"><i
-                    class="fa-brands fa-instagram"></i></a></div>
-        <div class="elem"><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <div class="elem">
+            <a href="https://www.instagram.com/moderngrpof_pharmacy?igsh=MXI0NXlyZW1rN2Z4Mw==" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
         </div>
-        <div class="elem"><a href="https://www.youtube.com/@modernpublicschooljhansi8250" target="_blank"><i
-                    class="fa-brands fa-youtube"></i></a></div>
+        <div class="elem"><a href="#" target="_blank">
+            <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </div>
+        <div class="elem"><a href="#" target="_blank">
+            <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </div>
     </div>
 
     <div class="card-wrapper">
@@ -264,11 +283,23 @@
                     <p> For Students Helpdesk: 7348550088</p>
                     <p> Other Enquiry
                         And Help Desk
-                        7318027770</p>
+                        7318027770
+                    </p>
+
                     <div class="elem">
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-twitter"></i>
+
+                        <a href="https://www.facebook.com/ModernCollegeofPharmacy?mibextid=ZbWKwL" target="_blank">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+
+                        <a href="https://www.instagram.com/moderngrpof_pharmacy?igsh=MXI0NXlyZW1rN2Z4Mw==" target="_blank">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+
+                        <a href="#"> 
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+
                     </div>
                 </ul>
             </div>
