--- a/vision_mission.html
+++ b/vision_mission.html
@@ -26,11 +26,18 @@
                     moderncollegeofpharmacyjhansi@gmail.com</a>
                     <a href="tel:+91 9889094094"><i class="fa-solid fa-phone"></i>+91 9889094094</a>
                     <a href="#"><p>Follow Social Media :</p></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.youtube.com/@modernpublicschooljhansi8250" target="_blank"><i
-                            class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/ModernCollegeofPharmacy?mibextid=ZbWKwL" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/moderngrpof_pharmacy?igsh=MXI0NXlyZW1rN2Z4Mw==" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
                     <button class="enquiry-btn" type="submit" value="Enquiry">ENQUIRY FORM</button>
             </div>
             <div class="form-container">
@@ -145,11 +152,23 @@
                     <p> For Students Helpdesk: 7348550088</p>
                     <p> Other Enquiry
                         And Help Desk
-                        7318027770</p>
+                        7318027770
+                    </p>
+
                     <div class="elem">
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-twitter"></i>
+
+                        <a href="https://www.facebook.com/ModernCollegeofPharmacy?mibextid=ZbWKwL" target="_blank">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+
+                        <a href="https://www.instagram.com/moderngrpof_pharmacy?igsh=MXI0NXlyZW1rN2Z4Mw==" target="_blank">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+
+                        <a href="#"> 
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+
                     </div>
                 </ul>
             </div>
@@ -162,11 +181,18 @@
                 </ul>
             </div>
         </div>
+
+
+        <button onclick="scrollToTop()" id="scrollbtn" title="Go to top">
+             <i class="fa-solid fa-angles-up"></i> </button>
+
+
         <div class="copyright">
             <p>© 2024. All Rights Reserved by, Modern College of Pharmacy, Jhansi
                 Maintained by: Franciscan Solutions Pvt. Ltd.<a title="Reach to Er. Harry for Website Creation!"
                     href="https://api.whatsapp.com/send?phone=7525037054">(Er.harry)</a></p>
         </div>
+
     
     </footer>
     <script src="js/script.js"></script>
