--- a/workshops_seminars.html
+++ b/workshops_seminars.html
@@ -27,11 +27,18 @@
                     moderncollegeofpharmacyjhansi@gmail.com</a>
                     <a href="tel:+91 9889094094"><i class="fa-solid fa-phone"></i>+91 9889094094</a>
                     <a href="#"><p>Follow Social Media :</p></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.youtube.com/@modernpublicschooljhansi8250" target="_blank"><i
-                            class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/ModernCollegeofPharmacy?mibextid=ZbWKwL" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/moderngrpof_pharmacy?igsh=MXI0NXlyZW1rN2Z4Mw==" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
                     <button class="enquiry-btn" type="submit" value="Enquiry">ENQUIRY FORM</button>
             </div>
             <div class="form-container">
@@ -127,48 +134,67 @@
     <figure style="display: flex; justify-content: center; align-items: center; margin-top:110px;position: relative;">
         <img src="images/coming_soon.jpg" style="mix-blend-mode: color-burn; margin-top: 100px;;"></figure>
 
-        <footer>
-            <div class="ftr-container">
-                <div class="ftr-content">
-                    <h2><i class="fa-solid fa-location-dot"></i>OUR CAMPUS</h2>
-                    <ul>
-                        <p> Address:Kochabhawar, Kanpur Road, Jhansi, Uttar Pradesh 284128 </p>
-                        <p> Office Contact: 9889094094</p>
-                        <p> Mail ID:</p>
-                        <p>moderncollegeofpharmacyjhansi@gmail.com</p>
-                    </ul>
-                </div>
-                <div class="brk-line"></div>
-                <div class="ftr-content">
-                    <h2><i class="fa-solid fa-phone"></i>CONTACT US</h2>
-                    <ul>
-                        <p> For Students Helpdesk: 7348550088</p>
-                        <p> Other Enquiry
-                            And Help Desk
-                            7318027770</p>
-                        <div class="elem">
+    <footer>
+        <div class="ftr-container">
+            <div class="ftr-content">
+                <h2><i class="fa-solid fa-location-dot"></i>OUR CAMPUS</h2>
+                <ul>
+                    <p> Address:Kochabhawar, Kanpur Road, Jhansi, Uttar Pradesh 284128 </p>
+                    <p> Office Contact: 9889094094</p>
+                    <p> Mail ID:</p>
+                    <p>moderncollegeofpharmacyjhansi@gmail.com</p>
+                </ul>
+            </div>
+            <div class="brk-line"></div>
+            <div class="ftr-content">
+                <h2><i class="fa-solid fa-phone"></i>CONTACT US</h2>
+                <ul>
+                    <p> For Students Helpdesk: 7348550088</p>
+                    <p> Other Enquiry
+                        And Help Desk
+                        7318027770
+                    </p>
+
+                    <div class="elem">
+
+                        <a href="https://www.facebook.com/ModernCollegeofPharmacy?mibextid=ZbWKwL" target="_blank">
                             <i class="fa-brands fa-facebook"></i>
+                        </a>
+
+                        <a href="https://www.instagram.com/moderngrpof_pharmacy?igsh=MXI0NXlyZW1rN2Z4Mw==" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
+                        </a>
+
+                        <a href="#"> 
                             <i class="fa-brands fa-twitter"></i>
-                        </div>
-                    </ul>
-                </div>
-                <div class="brk-line"></div>
-                <div class="ftr-content">
-                    <h2> <i class="fa-solid fa-envelope"></i>OFFICIAL E-Mail</h2>
-                    <ul>
-                        <P>moderncollegeofpharmacyjhansi@gmail.com</P>
-                        <P>mpsjhansiup@gmail.com</P>
-                    </ul>
-                </div>
+                        </a>
+
+                    </div>
+                </ul>
             </div>
-            <div class="copyright">
-                <p>© 2024. All Rights Reserved by, Modern College of Pharmacy, Jhansi
-                    Maintained by: Franciscan Solutions Pvt. Ltd.<a title="Reach to Er. Harry for Website Creation!"
-                        href="https://api.whatsapp.com/send?phone=7525037054">(Er.harry)</a></p>
+            <div class="brk-line"></div>
+            <div class="ftr-content">
+                <h2> <i class="fa-solid fa-envelope"></i>OFFICIAL E-Mail</h2>
+                <ul>
+                    <P>moderncollegeofpharmacyjhansi@gmail.com</P>
+                    <P>mpsjhansiup@gmail.com</P>
+                </ul>
             </div>
-        
-        </footer>
+        </div>
+
+
+        <button onclick="scrollToTop()" id="scrollbtn" title="Go to top">
+                <i class="fa-solid fa-angles-up"></i> </button>
+
+
+        <div class="copyright">
+            <p>© 2024. All Rights Reserved by, Modern College of Pharmacy, Jhansi
+                Maintained by: Franciscan Solutions Pvt. Ltd.<a title="Reach to Er. Harry for Website Creation!"
+                    href="https://api.whatsapp.com/send?phone=7525037054">(Er.harry)</a></p>
+        </div>
+
+    
+    </footer>
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
